Bug 40042 - iwlagn: bad 802.11n performance and "aggregation not enabled" flood in dmesg
Summary: iwlagn: bad 802.11n performance and "aggregation not enabled" flood in dmesg
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-25 18:46 UTC by Dmitry Nezhevenko
Modified: 2012-01-13 19:06 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.0
Subsystem:
Regression: No
Bisected commit-id:


Attachments
enable HT without checking (913 bytes, patch)
2011-07-25 19:25 UTC, wey-yi.w.guy
Details | Diff

Description Dmitry Nezhevenko 2011-07-25 18:46:12 UTC
Hi.

I'm trying to get 802.11n working with followed card:

   02:00.0 Network controller: Intel Corporation WiFi Link 5100

It's inside ASUS F6A laptop. I'm connecting it to another machine with:
   
   01:00.0 Network controller: Atheros Communications Inc. AR5008 Wireless Network Adapter (rev 01)

Atheros card is in AP mode (with hostapd). And just after connecting I'm getting followed messages:

[132378.252140] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0
[132404.533559] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 3
[132427.820093] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0
[132445.826017] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 1
[132448.868061] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0
[132472.781121] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 0
[132479.995679] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 9
[132482.848072] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0
[132505.042703] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 0
[132532.848067] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0
[132551.187911] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 0

I'm gettint something around 2.5Mbyte/sec while downloading some large file (fully intranet). Preinstalled Windows Vista is able to download same file at 5-6 mb/sec.
Comment 1 wey-yi.w.guy 2011-07-25 19:14:29 UTC
looks like the rate scale algor. believe the traffic is not high enough to trigger the HT.

what kernel version you are using?

Wey
Comment 2 Dmitry Nezhevenko 2011-07-25 19:21:26 UTC
It's 3.0 on laptop (with intel card) and 2.6.39 on "server" (with atheros).

If you are talking about "load" then rarely it becames 10:

[133484.288110] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 7
[133489.629618] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 6
[133493.258147] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 10
[133499.604734] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 1
[133507.886679] iwlagn 0000:02:00.0: Aggregation not enabled for tid 0 because load = 1

I'm downloading same file via http (and file is stored on server with atheros card, so everything is purely local and doesn't depends on any external resources)
Comment 3 wey-yi.w.guy 2011-07-25 19:25:51 UTC
Created attachment 66592 [details]
enable HT without checking 

please try this patch, I enable the HT without checking the traffic load

Wey
Comment 4 Dmitry Nezhevenko 2011-07-25 19:35:22 UTC
I'm getting:

[136613.600081] iwlagn 0000:02:00.0: iwlagn_tx_agg_start on ra = 00:21:91:f3:c8:a1 tid = 0

and download speed is something around 6 mb/sec.

So this is better and looks exactly like in Windows. I don't know, is it possible to get better results in these conditions.
Comment 5 wey-yi.w.guy 2011-07-25 19:38:40 UTC
Are you saying with the patch you are getting higher speed?

Thanks
Wey
Comment 6 Dmitry Nezhevenko 2011-07-25 19:55:40 UTC
Yes. Exactly. it's something around 3 mb/sec without patch and 5-7 mb/sec with.
Comment 7 Florian Mickler 2012-01-12 21:28:41 UTC
A patch referencing this bug report has been merged in Linux v3.2-rc1:

commit dd5b6d0a2059027366028630746d951b1e1e24b3
Author: Wey-Yi Guy <wey-yi.w.guy@intel.com>
Date:   Thu Aug 25 23:10:55 2011 -0700

    iwlagn: enable 11n aggregation without checking traffic load
Comment 8 John W. Linville 2012-01-13 19:06:26 UTC
Closing on the basis of comment 7...

Note You need to log in before you can comment on or make changes to this bug.